[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.5.3",
    "decorator>=5.2.1",
    "email-validator>=2.2.0",
    "ffmpeg-python>=0.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "librosa>=0.11.0",
    "moviepy>=2.2.1",
    "numpy>=2.2.6",
    "openai>=1.97.1",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "pydub>=0.25.1",
    "pytesseract>=0.3.13",
    "redis>=6.2.0",
    "sqlalchemy>=2.0.41",
    "werkzeug>=3.1.3",
]
